[package]
name = "numberfile"
version = "0.1.0"
authors = ["drmason13 <drmason13@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = { git = "https://github.com/clap-rs/clap/" }